[de.po] fix Wizard translation

--- a/po/de.po
+++ b/po/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-01-27 13:14+0100\n"
-"PO-Revision-Date: 2025-01-27 13:24+0100\n"
+"PO-Revision-Date: 2025-01-31 19:34+0100\n"
 "Last-Translator: Teamblue teamblue@online.de <teamblue-e2@online.de>\n"
 "Language-Team: Teamblue teamblue@online.de\n"
 "Language: de\n"
@@ -7456,7 +7456,7 @@ msgid "Next"
 msgstr "Es folgt"
 
 msgid "Next Wizard"
-msgstr "Nächster Zauberer"
+msgstr "Nächster Wizard"
 
 msgid "Next day starts at"
 msgstr "Der nächste Tag beginnt um"
